EXTRA_DIST = TestUtils.py \
    AllAutomaticTests.py \
    libvoikkoTest.py \
    libvoikkoOldTest.py \
    NullComponentTest.py \
    DictionaryInfoTest.py \
    Utf8ApiTest.py \
    DeprecatedApiTest.py \
    python3Test.sh \
    hfst/NorthSamiTest.py \
    malaga/ExtendedMorphologyTest.py \
    lttoolbox/ApertiumIcelandicTest.py
TESTS_ENVIRONMENT = env LD_LIBRARY_PATH=../src/.libs python
TESTS = AllAutomaticTests.py
