EXTRA_DIST = TestUtils.py \
    AllAutomaticTests.py \
    AllAutomaticTests.sh \
    libvoikkoTest.py \
    libvoikkoOldTest.py \
    NullComponentTest.py \
    DictionaryInfoTest.py \
    Utf8ApiTest.py \
    DeprecatedApiTest.py \
    python3Test.sh \
    hfst/MeadowMariTest.py \
    hfst/NorthSamiTest.py \
    malaga/ExtendedMorphologyTest.py \
    lttoolbox/ApertiumIcelandicTest.py
TESTS = AllAutomaticTests.sh
